Crear, eliminar, actualizar y ver preguntas; cambios generales

--- a/proyectofinal/templates/quiz/admin_question.html
+++ b/proyectofinal/templates/quiz/admin_question.html
@@ -22,11 +22,11 @@
       }
   
       .bg-c-blue {
-        background: linear-gradient(180deg, #04868f, #ffffff);
+        background: linear-gradient(180deg, #5c1b81, #ffffff);
       }
   
       .bg-c-green {
-        background: linear-gradient(180deg, #4C51BF, #ffffff);
+        background: linear-gradient(180deg, #ac4cbf, #ffffff);
       }
   
       .bg-c-yellow {
@@ -67,6 +67,10 @@
       left: 0px;
       right: 0px;
     }
+     .home-section{
+    background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
     </style>
   </head>
 <br><br>
@@ -76,7 +80,7 @@
       <div class="col-md-4 col-xl-6">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="admin-add-category" style="text-decoration: none;color:white;">Añadir categoría</a> </h6>
+            <h6 class="m-b-20"> <a href="admin-add-question" style="text-decoration: none;color:white;">Añadir pregunta</a> </h6>
             <h2 class="text-right"><i class="fas fa-plus f-left"></i></h2>
             
           </div>
@@ -86,7 +90,7 @@
       <div class="col-md-4 col-xl-6">
         <div class="card bg-c-green order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="admin-view-category" style="text-decoration: none;color:white;">Ver categorías</a> </h6>
+            <h6 class="m-b-20"><a href="admin-view-question" style="text-decoration: none;color:white;">Ver preguntas</a> </h6>
             <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
             
           </div>
