--- a/proyectofinal/templates/quiz/adminbase.html
+++ b/proyectofinal/templates/quiz/adminbase.html
@@ -295,13 +295,13 @@
         </li>
         <li>
           <div class="iocn-link">
-            <a href="/admin-course">
+            <a href="/admin-category">
               <i class='bx bx-collection' ></i>
               <span class="link_name">Categorías</span>
             </a>
           </div>
           <ul class="sub-menu">
-            <li><a class="link_name" href="/admin-course">Categorías</a></li>
+            <li><a class="link_name" href="/admin-category">Categorías</a></li>
           </ul>
         </li>
         <li>
@@ -325,12 +325,12 @@
           </ul>
         </li>
         <li>
-          <a href="/admin-student">
+          <a href="/admin-user">
             <i class='bx bx-user' ></i>
             <span class="link_name">Usuarios</span>
           </a>
           <ul class="sub-menu blank">
-            <li><a class="link_name" href="/admin-student">Usuarios</a></li>
+            <li><a class="link_name" href="/admin-user">Usuarios</a></li>
           </ul>
         </li>
         <li>
