--- a/proyectofinal/templates/quiz/index.html
+++ b/proyectofinal/templates/quiz/index.html
@@ -62,8 +62,8 @@ http://www.templatemo.com/tm-509-hydro
                          <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                         <li class="section-btn"><a href="student/studentlogin" role="button">Ingresar</a></li>
-                         <li class="section-btn"><a href="student/studentsignup" role="button">Registrarse</a></li>
+                         <li class="section-btn"><a href="user/userlogin" role="button">Ingresar</a></li>
+                         <li class="section-btn"><a href="user/usersignup" role="button">Registrarse</a></li>
                     </ul>
                </div>
 
