--- a/proyectofinal/templates/user/userclick.html
+++ b/proyectofinal/templates/user/userclick.html
@@ -33,8 +33,8 @@
     <hr class="my-4">
     <p>Accederás a las funciones después de iniciar sesión.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="studentsignup" role="button" id="button">Crea tu cuenta</a>
-      <a class="btn btn-primary btn-lg" href="studentlogin" role="button" id="button">Inicia sesión</a>
+      <a class="btn btn-primary btn-lg" href="usersignup" role="button" id="button">Crea tu cuenta</a>
+      <a class="btn btn-primary btn-lg" href="userlogin" role="button" id="button">Inicia sesión</a>
     </p>
     <br><br><br><br><br><br>
   </div>
