--- a/proyectofinal/templates/quiz/admin_add_category.html
+++ b/proyectofinal/templates/quiz/admin_add_category.html
@@ -39,13 +39,11 @@
     {%csrf_token%}
     <div class="form-group">
       <label for="course_name">Nombre de categoría</label>
-      {% render_field courseForm.course_name class="form-control" placeholder="Ej: Historia" %}
+      {% render_field categoryForm.category_name class="form-control" placeholder="Ej: Historia" %}
 
       <label for="question_number">Número máximo de preguntas</label>
-      {% render_field courseForm.question_number class="form-control" placeholder="Ej: 30" %}
+      {% render_field categoryForm.question_number class="form-control" placeholder="Ej: 30" %}
 
-      <label for="total_marks">Puntaje máximo</label>
-      {% render_field courseForm.total_marks class="form-control" placeholder="Ej: 100" %}
     </div>
     
 
