--- a/proyectofinal/templates/quiz/admin_dashboard.html
+++ b/proyectofinal/templates/quiz/admin_dashboard.html
@@ -76,7 +76,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="admin-view-student" style="text-decoration: none;color:white;">Total de usuarios</a> </h6>
+            <h6 class="m-b-20"> <a href="admin-view-user" style="text-decoration: none;color:white;">Total de usuarios</a> </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_user}}</span></h2>
             
           </div>
@@ -86,7 +86,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="admin-view-course" style="text-decoration: none;color:white;">Categorías</a></h6>
+            <h6 class="m-b-20"><a href="admin-view-category" style="text-decoration: none;color:white;">Categorías</a></h6>
            <h2 class="text-right"><i class="fas fa-book f-left"></i><span>{{total_category}}</span></h2>
             
           </div>
