--- a/proyectofinal/templates/quiz/admin_view_question.html
+++ b/proyectofinal/templates/quiz/admin_view_question.html
@@ -20,21 +20,28 @@
       margin: 100px;
     }
     #panel2{
-      background: #2f323a;
+      background: #6d047bf5;
     }
     #panel{
-      border-color: #2f323a;
+      border-color: #6d047bf5;
     }
     th, tr {
       text-align: center;
     }
+
+    .home-section{
+    background: #00F260;
+    background: linear-gradient(#6d047bf5, #ffffff);
+  }
+  
   </style>
 </head>
+<body>
 <br><br>
 <div class="container">
   <div class="panel panel-primary" id="panel">
     <div class="panel-heading" id="panel2">
-      <h6 class="panel-title">Categorías</h6>
+      <h6 class="panel-title">Seleccione la categoría para ver las preguntas</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
@@ -43,23 +50,22 @@
           <th>Nombre</th>
           <th>Número de preguntas</th>
           <th>Puntaje máximo</th>
-          <th>Actualizar</th>
-          <th>Eliminar</th>
+          <th>Ver preguntas</th>
         </tr>
       </thead>
-      {% for t in categories %}
+      {% for c in categories %}
       <tr>
 
-        <td> {{t.category_name}}</td>
-        <td>{{t.question_number}}</td>
-        <td>{{t.total_marks}}</td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'update-category' t.id  %}"><span class="glyphicon glyphicon-edit"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-category' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td> {{c.category_name}}</td>
+        <td>{{c.question_number}}</td>
+        <td>{{c.total_marks}}</td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'view-question' c.id  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        
       </tr>
       {% endfor %}
     </table>
   </div>
 </div>
 
-<br><br><br><br><br><br>
+<br><br><br><br><br><br></body>
 {% endblock content %}
