--- a/proyectofinal/templates/quiz/admin_add_category.html
+++ b/proyectofinal/templates/quiz/admin_add_category.html
@@ -41,7 +41,7 @@
       <label for="course_name">Nombre de categoría</label>
       {% render_field categoryForm.category_name class="form-control" placeholder="Ej: Historia" %}
 
-      <label for="question_number">Número máximo de preguntas</label>
+      <label for="question_number">Número de preguntas a responder</label>
       {% render_field categoryForm.question_number class="form-control" placeholder="Ej: 30" %}
 
     </div>
