--- a/proyectofinal/templates/quiz/admin_view_marks.html
+++ b/proyectofinal/templates/quiz/admin_view_marks.html
@@ -34,27 +34,24 @@
 <div class="container">
   <div class="panel panel-primary" id="panel">
     <div class="panel-heading" id="panel2">
-      <h6 class="panel-title">Preguntas</h6>
+      <h6 class="panel-title">Cuestionarios realizados</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
 
-          <th>Pregunta</th>
-
-          <th>Actualizar pregunta</th>
-          <th>Eliminar pregunta</th>
-
+          <th>Categoría</th>
+          
+          <th>Ver resultados</th>
         </tr>
       </thead>
-      {% for c in questions %}
+      {% for c in categories %}
       <tr>
 
-        <td> {{c.question}}</td>
-
-        <td><a class="btn btn-primary btn-xs" href="{% url 'update-question' c.id  %}"><span class="glyphicon glyphicon-edit"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-question' c.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td> {{c.category_name}}</td>
         
+        
+        <td><a class="btn btn-danger btn-xs" href="{% url 'admin-check-marks' c.id  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
       </tr>
       {% endfor %}
     </table>
