Agregación de navbar y footer

--- a/proyectofinal/templates/user/edit_profile.html
+++ b/proyectofinal/templates/user/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends 'student/studentbase.html' %}
+{% extends 'user/userbase.html' %}
 {% load widget_tweaks %}
 {% block title %}
     <title>Editar perfil</title>
