--- a/proyectofinal/templates/user/user_dashboard.html
+++ b/proyectofinal/templates/user/user_dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends 'student/studentbase.html' %}
+{% extends 'user/userbase.html' %}
 {% load widget_tweaks %}
 {% block content %}
 
