--- a/proyectofinal/templates/user/userbase.html
+++ b/proyectofinal/templates/user/userbase.html
@@ -284,61 +284,61 @@
     </div>
     <ul class="nav-links">
       <li>
-        <a href="/student/student-dashboard">
+        <a href="/user/user-dashboard">
           <i class='bx bx-grid-alt' ></i>
           <span class="link_name">General</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="link_name" href="/student/student-dashboard">General</a></li>
+          <li><a class="link_name" href="/user/user-dashboard">General</a></li>
         </ul>
       </li>
       <li>
         <div class="iocn-link">
-          <a href="/student/student-exam">
+          <a href="/user/user-exam">
             <i class='bx bx-collection' ></i>
             <span class="link_name">Jugar</span>
           </a>
         </div>
         <ul class="sub-menu">
-          <li><a class="link_name" href="/student/student-exam">Jugar</a></li>
+          <li><a class="link_name" href="/user/user-exam">Jugar</a></li>
         </ul>
       </li>
       <li>
         <div class="iocn-link">
-          <a href="/student/student-marks">
+          <a href="/user/user-marks">
             <i class='bx bx-book-alt' ></i>
             <span class="link_name">Mis partidas</span>
           </a>
         </div>
         <ul class="sub-menu blank">
-          <li><a class="link_name" href="/student/student-marks">Mis partidas</a></li>
+          <li><a class="link_name" href="/user/user-marks">Mis partidas</a></li>
         </ul>
       </li>
       <li>
-        <a href="/student/student-statistics">
+        <a href="/user/user-statistics">
           <i class='bx bx-pie-chart-alt-2' ></i>
           <span class="link_name">Estadísticas</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="link_name" href="/student/student-statistics">Estadísticas</a></li>
+          <li><a class="link_name" href="/user/user-statistics">Estadísticas</a></li>
         </ul>
       </li>
       <li>
-        <a href="/student/edit-profile">
+        <a href="/user/edit-profile">
           <i class='bx bx-user' ></i>
           <span class="link_name">Editar usuario</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="link_name" href="/student/edit-profile">Editar usuario</a></li>
+          <li><a class="link_name" href="/user/edit-profile">Editar usuario</a></li>
         </ul>
       </li>
       <li>
-        <a href="/student/student-ranking">
+        <a href="/user/user-ranking">
           <i class='bx bx-trophy'></i>
           <span class="link_name">Ranking</span>
         </a>
         <ul class="sub-menu blank">
-          <li><a class="link_name" href="/student/student-ranking">Ranking</a></li>
+          <li><a class="link_name" href="/user/user-ranking">Ranking</a></li>
         </ul>
       </li>
       <li>
