--- a/proyectofinal/templates/user/usersignup.html
+++ b/proyectofinal/templates/user/usersignup.html
@@ -60,7 +60,7 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="mobile">Teléfono</label>
-          {% render_field studentForm.mobile|attr:'required:true'  class="form-control" placeholder="Ej: +54 9 3731 641678" %}
+          {% render_field studentForm.mobile class="form-control" placeholder="Ej: +54 9 3731 641678" %}
         </div>
         <div class="form-group col-md-6">
           <label for="address">Dirección</label>
