Creación de juego, estadísticas y ranking de admin

--- a/proyectofinal/templates/quiz/adminbase.html
+++ b/proyectofinal/templates/quiz/adminbase.html
@@ -316,12 +316,12 @@
           </ul>
         </li>
         <li>
-          <a href="#">
-            <i class='bx bx-pie-chart-alt-2' ></i>
-            <span class="link_name">Estadísticas</span>
+          <a href="/admin-view-ranking">
+            <i class='bx bx-trophy' ></i>
+            <span class="link_name">Ranking</span>
           </a>
           <ul class="sub-menu blank">
-            <li><a class="link_name" href="#">Estadísticas</a></li>
+            <li><a class="link_name" href="/admin-view-ranking">Ranking</a></li>
           </ul>
         </li>
         <li>
